--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "next": "13.5.4",
+    "next-auth": "^4.23.2",
+    "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "typescript": "^5"
   }
 }
